src/test/ui/generic-associated-types/parse/trait-path-expected-token.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `<`, or `>`, found `=`
  --> $DIR/trait-path-expected-token.rs:8:33
   |
LL | fn f1<'a>(arg : Box<dyn X<Y = B = &'a ()>>) {}
   |                                 ^ expected one of 7 possible tokens

warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/trait-path-expected-token.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error: aborting due to previous error; 1 warning emitted

